[package]
name = "ft60x"
version = "0.1.0"
authors = ["Robin Ole Heinemann <robin.ole.heinemann@t-online.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusb = { version = "0.4.0", git = "https://github.com/apertus-open-source-cinema/rusb", rev="async" }
failure = "*"
byteorder = "*"
bitflags = "*"


[profile.release]
# debug = true
# lto = "fat"
# codegen-units = 1