[package]
name = "ft60x"
version = "0.1.1"
authors = ["Robin Ole Heinemann <robin.ole.heinemann@t-online.de>"]
edition = "2018"

[dependencies]
rusb = { version = "0.4.0", git = "https://github.com/apertus-open-source-cinema/rusb", rev="async" }
byteorder = "1.3.4"
bitflags = "1.2.1"
failure = "0.1.8"
lazy_static = "1.4.0"


[profile.release]
# debug = true
# lto = "fat"
# codegen-units = 1